feat: add register form

--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -1,5 +1,21 @@
 {
-  "home": {
-    "hello": "Привет!"
+  "auth": {
+    "register": {
+      "heading": "Присоединяйтесь к Elcast сегодня",
+      "backButtonLabel": "Уже есть аккаунт? Войти",
+      "usernameLabel": "Имя пользователя",
+      "usernameDescription": "Это имя, под которым вас будут знать на Elcast. Вы всегда сможете изменить его позже.",
+      "emailLabel": "Электронная почта",
+      "passwordLabel": "Пароль",
+      "passwordDescription": "Пароль должен содержать не менее 8 символов.",
+      "submitButton": "Зарегистрироваться",
+      "successAlertTitle": "Аккаунт успешно создан",
+      "successAlertDescription": "Мы отправили вам письмо для подтверждения аккаунта. Пожалуйста, проверьте ваш почтовый ящик.",
+      "successMessage": "Аккаунт успешно создан",
+      "errorMessage": "Не удалось создать аккаунт"
+    },
+    "verify": {
+      "successMessage": "Ваш аккаунт был подтвержден. Теперь вы можете войти."
+    }
   }
 }
