--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -1,5 +1,21 @@
 {
-  "home": {
-    "hello": "Hello!"
+  "auth": {
+    "register": {
+      "heading": "Join Elcast today",
+      "backButtonLabel": "Have an account? Log in",
+      "usernameLabel": "Username",
+      "usernameDescription": "This is the name people will know you by on Elcast. You can always change it later.",
+      "emailLabel": "Email",
+      "passwordLabel": "Password",
+      "passwordDescription": "Password must be at least 8 characters long.",
+      "submitButton": "Sign up",
+      "successAlertTitle": "Account created successfully",
+      "successAlertDescription": "We've sent you an email to verify your account. Please check your inbox.",
+      "successMessage": "Account created successfully",
+      "errorMessage": "Couldn't create account"
+    },
+    "verify": {
+      "successMessage": "Your account has been verified. You can now log in."
+    }
   }
 }
