--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -15,7 +15,9 @@
       "errorMessage": "Не удалось создать аккаунт"
     },
     "verify": {
-      "successMessage": "Ваш аккаунт был подтвержден. Теперь вы можете войти."
+      "heading": "Подтверждение аккаунта",
+      "successMessage": "Ваш аккаунт был подтвержден. Теперь вы можете войти.",
+      "errorMessage": "Не удалось подтвердить аккаунт"
     }
   }
 }
