--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -31,6 +31,16 @@
       "submitButton": "Войти",
       "successMessage": "Вы успешно вошли в систему",
       "errorMessage": "Ошибка при входе"
+    },
+    "resetPassword": {
+      "heading": "Возвращение в ваш аккаунт Elcast",
+      "backButtonLabel": "Уже есть аккаунт? Войдите",
+      "emailLabel": "Электронная почта",
+      "emailDescription": "Электронная почта, которую вы использовали при создании аккаунта",
+      "submitButton": "Сбросить пароль",
+      "successAlertTitle": "Ссылка для сброса пароля отправлена",
+      "successAlertDescription": "Мы отправили вам письмо со ссылкой для сброса пароля. Пожалуйста, проверьте ваш почтовый ящик.",
+      "errorMessage": "Произошла ошибка при сбросе пароля"
     }
   }
 }
