--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -41,6 +41,16 @@
       "successAlertTitle": "Ссылка для сброса пароля отправлена",
       "successAlertDescription": "Мы отправили вам письмо со ссылкой для сброса пароля. Пожалуйста, проверьте ваш почтовый ящик.",
       "errorMessage": "Произошла ошибка при сбросе пароля"
+    },
+    "newPassword": {
+      "heading": "Возвращение в ваш аккаунт Elcast",
+      "backButtonLabel": "Есть аккаунт? Войти",
+      "passwordLabel": "Новый пароль",
+      "passwordDescription": "Пароль должен быть длиной не менее 8 символов.",
+      "passwordRepeatLabel": "Повторите новый пароль",
+      "submitButton": "Установить новый пароль",
+      "successMessage": "Пароль успешно сброшен",
+      "errorMessage": "Произошла ошибка при сбросе пароля"
     }
   }
 }
