feat: implement user navigation and recommended channels in sidebar

--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -104,5 +104,10 @@
         "transactions": "Транзакции"
       }
     }
+  },
+  "components": {
+    "liveBadge": {
+      "text": "В ЭФИРЕ"
+    }
   }
 }
