--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -104,5 +104,10 @@
         "transactions": "Transactions"
       }
     }
+  },
+  "components": {
+    "liveBadge": {
+      "text": "LIVE"
+    }
   }
 }
