feat: add user settings page with initial tabs

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -105,6 +105,19 @@
       }
     }
   },
+  "dashboard": {
+    "settings": {
+      "header": {
+        "heading": "Settings",
+        "description": "Here you can manage your settings",
+        "profile": "Profile",
+        "account": "Account",
+        "appearance": "Appearance",
+        "notifications": "Notifications",
+        "sessions": "Sessions"
+      }
+    }
+  },
   "components": {
     "liveBadge": {
       "text": "LIVE"
