--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -105,6 +105,19 @@
       }
     }
   },
+  "dashboard": {
+    "settings": {
+      "header": {
+        "heading": "Настройки",
+        "description": "Здесь вы можете управлять своими настройками",
+        "profile": "Профиль",
+        "account": "Аккаунт",
+        "appearance": "Внешний вид",
+        "notifications": "Уведомления",
+        "sessions": "Сессии"
+      }
+    }
+  },
   "components": {
     "liveBadge": {
       "text": "В ЭФИРЕ"
