feat: add profile image upload

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -179,6 +179,10 @@
   "components": {
     "liveBadge": {
       "text": "LIVE"
+    },
+    "confirmModal": {
+      "cancel": "Cancel",
+      "continue": "Continue"
     }
   }
 }
