--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -179,6 +179,10 @@
   "components": {
     "liveBadge": {
       "text": "В ЭФИРЕ"
+    },
+    "confirmModal": {
+      "cancel": "Отмена",
+      "continue": "Продолжить"
     }
   }
 }
