--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -156,8 +156,8 @@
             "titlePlaceholder": "YouTube",
             "titleDescription": "Текст ссылки",
             "urlLabel": "URL ссылки",
-            "urlPlaceholder": "https://github.com/TeaCoder52",
-            "urlDescription": "Куда ведет эта ссылка? Пожалуйста, укажите полный URL, например, https://github.com/TeaCoder52",
+            "urlPlaceholder": "https://github.com/eldarcodes",
+            "urlDescription": "Куда ведет эта ссылка? Пожалуйста, укажите полный URL, например, https://github.com/eldarcodes",
             "submitButton": "Добавить",
             "successMessage": "Ссылка на социальные сети успешно добавлена",
             "errorMessage": "Ошибка добавления ссылки на социальные сети"
