feat: add change email form

--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -173,6 +173,65 @@
           "successReorderMessage": "Порядок ссылок на социальные сети изменен",
           "errorReorderMessage": "Ошибка изменения порядка ссылок на социальные сети"
         }
+      },
+      "account": {
+        "header": {
+          "heading": "Аккаунт",
+          "description": "Управляйте настройками вашего аккаунта, включая изменения доступа, безопасность и параметры деактивации.",
+          "securityHeading": "Безопасность",
+          "securityDescription": "Настройте двухфакторную аутентификацию и автопродление для повышения защиты ваших данных.",
+          "deactivationHeading": "Деактивация",
+          "deactivationDescription": "Если вы хотите временно или навсегда отключить свой аккаунт, используйте эту опцию. Учтите последствия."
+        },
+        "email": {
+          "heading": "Адрес электронной почты",
+          "emailLabel": "Электронная почта",
+          "emailDescription": "Введите новый адрес электронной почты.",
+          "submitButton": "Сохранить",
+          "successMessage": "Электронная почта успешно обновлена",
+          "errorMessage": "Ошибка при обновлении электронной почты"
+        },
+        "password": {
+          "heading": "Пароль аккаунта",
+          "oldPasswordLabel": "Старый пароль",
+          "oldPasswordDescription": "Введите ваш старый пароль, чтобы подтвердить личность перед изменением пароля. Это необходимо для обеспечения безопасности вашего аккаунта.",
+          "newPasswordLabel": "Новый пароль",
+          "newPasswordDescription": "Ваш новый пароль должен содержать не менее 8 символов. Рекомендуется использовать специальные символы для дополнительной безопасности.",
+          "submitButton": "Сохранить",
+          "successMessage": "Пароль успешно обновлен",
+          "errorMessage": "Ошибка при обновлении пароля"
+        },
+        "twoFactor": {
+          "heading": "TOTP-аутентификация",
+          "description": "Улучшите безопасность вашего аккаунта, включив TOTP-аутентификацию. Этот дополнительный уровень защиты требует ввода уникального кода, что делает ваш аккаунт менее уязвимым для несанкционированного доступа.",
+          "enable": {
+            "trigger": "Включить",
+            "heading": "Включение TOTP",
+            "qrInstructions": "Сканируйте QR-код, чтобы добавить TOTP",
+            "secretCodeLabel": "Секретный код: ",
+            "pinLabel": "PIN-код",
+            "pinDescription": "Пожалуйста, введите 6-значный код из вашего приложения для аутентификации.",
+            "submitButton": "Подтвердить",
+            "successMessage": "TOTP-аутентификация включена",
+            "errorMessage": "Ошибка при проверке кода"
+          },
+          "disable": {
+            "trigger": "Отключить",
+            "heading": "Вы уверены, что хотите отключить TOTP?",
+            "message": "Отключение TOTP-аутентификации сделает ваш аккаунт менее защищенным. Вы уверены, что хотите продолжить?",
+            "successMessage": "TOTP-аутентификация была отключена",
+            "errorMessage": "Ошибка при отключении"
+          }
+        },
+        "deactivation": {
+          "heading": "Деактивация аккаунта",
+          "description": "После деактивации вашего аккаунта вы не сможете войти в него. Ваш аккаунт будет полностью удален через 7 дней. До этого вы можете связаться с поддержкой, чтобы восстановить доступ и разблокировать ваш аккаунт.",
+          "confirmModal": {
+            "heading": "Подтверждение деактивации",
+            "message": "Вы уверены, что хотите деактивировать свой аккаунт? Доступ можно восстановить только в течение 7 дней."
+          },
+          "button": "Деактивировать"
+        }
       }
     }
   },
