--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -51,6 +51,19 @@
       "submitButton": "Установить новый пароль",
       "successMessage": "Пароль успешно сброшен",
       "errorMessage": "Произошла ошибка при сбросе пароля"
+    },
+    "deactivate": {
+      "heading": "Деактивировать аккаунт",
+      "backButtonLabel": "Перейти на главную",
+      "emailLabel": "Электронная почта",
+      "emailDescription": "Электронная почта, которую вы указали при регистрации",
+      "passwordLabel": "Пароль",
+      "passwordDescription": "Пароль, который вы указали при регистрации",
+      "pinLabel": "6-значный код",
+      "pinDescription": "Код был отправлен на вашу электронную почту. Если вы включили уведомления в Telegram, код также отправлен туда",
+      "submitButton": "Деактивировать",
+      "successMessage": "Ваш аккаунт успешно деактивирован",
+      "errorMessage": "Ошибка деактивации"
     }
   },
   "layout": {
