feat: add theme toggle on appearance settings tab

--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -245,6 +245,70 @@
           },
           "button": "Деактивировать"
         }
+      },
+      "appearance": {
+        "header": {
+          "heading": "Внешний вид",
+          "description": "Настройте внешний вид интерфейса сайта по своему вкусу. Выберите тему и язык, которые сделают ваше использование более комфортным."
+        },
+        "theme": {
+          "heading": "Изменить тему",
+          "description": "Вы можете выбрать темную или светлую тему для интерфейса сайта.",
+          "successMessage": "Тема сайта успешно изменена"
+        },
+        "language": {
+          "heading": "Язык сайта",
+          "description": "Выберите язык, который будет использоваться на сайте.",
+          "selectPlaceholder": "Выберите язык",
+          "successMessage": "Язык сайта успешно изменен"
+        },
+        "color": {
+          "heading": "Цвет акцента",
+          "description": "Выберите акцентный цвет для интерфейса"
+        }
+      },
+      "notifications": {
+        "header": {
+          "heading": "Уведомления",
+          "description": "Настройте, как вы хотите получать уведомления от Elcast. Вы будете получать уведомления о начале трансляций на каналах, на которые вы подписаны, а также о новых подписчиках."
+        },
+        "siteNotifications": {
+          "heading": "Уведомления на сайте",
+          "description": "Если вы отключите уведомления на сайте, вы не будете получать уведомления о новых подписчиках на вашем канале и о новых трансляциях."
+        },
+        "telegramNotifications": {
+          "heading": "Уведомления в Telegram",
+          "description": "Если вы включите уведомления через Telegram, ваш аккаунт Elcast будет связан с вашим аккаунтом Telegram, и вы будете получать сообщения о новых подписках, новых трансляциях, сбросе пароля и кодах двухфакторной аутентификации."
+        },
+        "successMessage": "Настройки уведомлений успешно обновлены",
+        "errorMessage": "Ошибка при обновлении настроек уведомлений"
+      },
+      "sessions": {
+        "header": {
+          "heading": "Сессии",
+          "description": "Сессии — это устройства, которые вы используете или использовали для входа в свой аккаунт Elcast. Здесь вы можете увидеть активные сессии."
+        },
+        "info": {
+          "current": "Текущая сессия",
+          "active": "Активные сессии",
+          "notFound": "Активные сессии не найдены"
+        },
+        "sessionItem": {
+          "deleteButton": "Удалить",
+          "detailsButton": "Детали",
+          "confirmModal": {
+            "heading": "Удалить сессию",
+            "message": "Вы уверены, что хотите удалить эту сессию? Это действие приведет к безвозвратному удалению сессии на этом устройстве и завершению всех активных действий, связанных с ней."
+          },
+          "successMessage": "Сессия удалена"
+        },
+        "sessionModal": {
+          "heading": "Информация о сессии",
+          "device": "Устройство:",
+          "location": "Местоположение:",
+          "ipAddress": "IP-адрес:",
+          "createdAt": "Создано:"
+        }
       }
     }
   },
