feat: add chat settings page

--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -362,6 +362,38 @@
         "successMessage": "Ingress создан",
         "errorMessage": "Ошибка при создании ingress"
       }
+    },
+    "chat": {
+      "header": {
+        "heading": "Настройки чата",
+        "description": "Здесь вы можете управлять настройками вашего чата."
+      },
+      "isChatEnabled": {
+        "heading": "Включить чат",
+        "description": "Если вы включите чат, зрители смогут писать сообщения в чате во время вашей трансляции."
+      },
+      "isChatFollowersOnly": {
+        "heading": "Чат только для подписчиков",
+        "description": "Если вы включите эту настройку, только ваши подписчики смогут писать сообщения в чате."
+      },
+      "isChatSubscribersOnly": {
+        "heading": "Чат только для премиум подписчиков",
+        "description": "Если вы включите эту настройку, только премиум подписчики смогут писать сообщения в чате."
+      },
+      "successMessage": "Настройки чата успешно обновлены",
+      "errorMessage": "Ошибка при обновлении настроек чата "
+    },
+    "followers": {
+      "header": {
+        "heading": "Подписчики",
+        "description": "Здесь отображается список всех ваших подписчиков."
+      },
+      "columns": {
+        "date": "Дата подписи",
+        "user": "Пользователь",
+        "actions": "Действия",
+        "viewChannel": "Перейти на канал"
+      }
     }
   },
   "components": {
