feat: add followers table

--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -406,6 +406,13 @@
     },
     "copyButton": {
       "successMessage": "Скопировано"
+    },
+    "dataTable": {
+      "notFound": "Ничего не найдено"
+    },
+    "emptyState": {
+      "heading": "Ничего не найдено",
+      "text": "Мы обыскали все уголки нашего сайта, но, к сожалению, по вашему запросу ничего не найдено. Может быть, вы попробуете что-нибудь другое?"
     }
   }
 }
