--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -406,6 +406,13 @@
     },
     "copyButton": {
       "successMessage": "Copied"
+    },
+    "dataTable": {
+      "notFound": "Nothing found"
+    },
+    "emptyState": {
+      "heading": "Nothing found",
+      "text": "We've searched every corner of our site, but unfortunately, nothing was found for your request. Maybe you could try something else?"
     }
   }
 }
