feat: display 4 random streams on home page

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -396,6 +396,20 @@
       }
     }
   },
+  "home": {
+    "streamsHeading": "Channels You Might Like",
+    "categoriesHeading": "Categories You Might Like"
+  },
+  "categories": {
+    "heading": "Categories",
+    "overview": {
+      "heading": "Streams for this category"
+    }
+  },
+  "streams": {
+    "heading": "Streams",
+    "searchHeading": "Search by query"
+  },
   "components": {
     "liveBadge": {
       "text": "LIVE"
