feat(chat): add stream chat with apollo subscriptions

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -443,6 +443,23 @@
       "heading": "About",
       "followersCount": "followers",
       "noDescription": "Description not provided."
+    },
+    "chat": {
+      "heading": "Chat",
+      "unavailable": "Chat unavailable",
+      "unavailableMessage": "Chat is unavailable while there is no stream on the channel. Please check back later!",
+      "loading": "Connecting...",
+      "info": {
+        "authRequired": "Authorization required",
+        "chatDisabled": "Chat disabled",
+        "subscribersOnly": "For subscribers only",
+        "followersOnly": "For followers only"
+      },
+      "sendMessage": {
+        "placeholder": "Send a message",
+        "emojiPlaceholder": "Search",
+        "errorMessage": "Error while sending message."
+      }
     }
   },
   "components": {
