feat: add stream settings

--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -460,6 +460,32 @@
         "emojiPlaceholder": "Поиск",
         "errorMessage": "Ошибка при отправке сообщения."
       }
+    },
+    "settings": {
+      "heading": "Настройки трансляции",
+      "thumbnail": {
+        "updateButton": "Обновить изображение",
+        "confirmModal": {
+          "heading": "Удаление миниатюры трансляции",
+          "message": "Вы уверены, что хотите удалить миниатюру трансляции? Это действие нельзя отменить."
+        },
+        "info": "Поддерживаемые форматы: JPG, JPEG, PNG или GIF. Максимальный размер: 10 МБ.",
+        "successUpdateMessage": "Изображение трансляции успешно обновлено",
+        "errorUpdateMessage": "Ошибка при обновлении изображения трансляции",
+        "successRemoveMessage": "Изображение трансляции успешно удалено",
+        "errorRemoveMessage": "Ошибка при удалении изображения трансляции"
+      },
+      "info": {
+        "titleLabel": "Название",
+        "titlePlaceholder": "GTA 5 Трансляция",
+        "titleDescription": "Введите название вашей трансляции. Оно должно быть коротким и запоминающимся.",
+        "categoryLabel": "Категория",
+        "categoryPlaceholder": "Выберите категорию",
+        "categoryDescription": "Выберите категорию, к которой относится ваш контент. Это поможет зрителям легче находить ваши трансляции.",
+        "submitButton": "Сохранить изменения",
+        "successMessage": "Настройки трансляции успешно обновлены",
+        "errorMessage": "Ошибка при обновлении настроек трансляции"
+      }
     }
   },
   "components": {
