feat(seo): seo optimizations

--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -488,6 +488,10 @@
       }
     }
   },
+  "notFound": {
+    "description": "Oops, something went wrong.",
+    "backToHome": "Back to Home"
+  },
   "components": {
     "liveBadge": {
       "text": "LIVE"
