--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -488,6 +488,10 @@
       }
     }
   },
+  "notFound": {
+    "description": "Что-то пошло не так, и мы не смогли найти страницу, которую вы искали.",
+    "backToHome": "Вернуться на главную"
+  },
   "components": {
     "liveBadge": {
       "text": "В ЭФИРЕ"
