--- a/frontend/public/locales/en.json
+++ b/frontend/public/locales/en.json
@@ -147,18 +147,29 @@
         },
         "info": {
           "heading": "Profile Settings",
-          "usernameLabel": "Username",
-          "usernamePlaceholder": "johndoe",
-          "usernameDescription": "This is how other users will know you.",
           "displayNameLabel": "Display Name",
-          "displayNamePlaceholder": "John Doe",
-          "displayNameDescription": "You can use uppercase letters in your display name as you wish.",
-          "bioLabel": "About Me",
+          "displayNamePlaceholder": "JohnDoe",
+          "displayNameDescription": "Customize capitalization for your username.",
+          "bioLabel": "Bio",
           "bioPlaceholder": "I love programming",
-          "bioDescription": "The information about yourself should contain no more than 300 characters.",
+          "bioDescription": "Description for the About panel on your channel page in under 300 characters.",
           "successMessage": "Profile successfully updated",
           "errorMessage": "Error updating profile",
           "submitButton": "Save Changes"
+        },
+        "username": {
+          "usernameLabel": "Username",
+          "usernamePlaceholder": "Your username",
+          "usernameDescription": "You may update your username.",
+          "modal": {
+            "heading": "Change Username",
+            "description": "Username updates can be performed once every 7 days. The update takes effect immediately and will affect how your followers recognize you.",
+            "cancelButton": "Cancel",
+            "usernameUrlPreview": "New channel URL",
+            "submitButton": "Update",
+            "successMessage": "Username successfully updated",
+            "errorMessage": "Error updating username"
+          }
         },
         "socialLinks": {
           "createForm": {
