--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -210,6 +210,10 @@
           "emailLabel": "Электронная почта",
           "emailDescription": "Введите новый адрес электронной почты.",
           "submitButton": "Сохранить",
+          "verified": "Подтверждено",
+          "notVerified": "Не подтверждено",
+          "verifiedText": "Спасибо за подтверждение вашей электронной почты.",
+          "notVerifiedText": "Пожалуйста, подтвердите вашу электронную почту, чтобы избежать проблем.",
           "successMessage": "Электронная почта успешно обновлена",
           "errorMessage": "Ошибка при обновлении электронной почты"
         },
