--- a/frontend/public/locales/ru.json
+++ b/frontend/public/locales/ru.json
@@ -83,7 +83,9 @@
           "successMessage": "Успешный выход из системы",
           "errorMessage": "Ошибка выхода из системы",
           "channel": "Мой канал",
-          "dashboard": "Панель управления",
+          "settings": "Настройки",
+          "language": "Язык",
+          "darkTheme": "Темная тема",
           "logout": "Выйти"
         }
       },
@@ -265,7 +267,7 @@
           "description": "Настройте внешний вид интерфейса сайта по своему вкусу. Выберите тему и язык, которые сделают ваше использование более комфортным."
         },
         "theme": {
-          "heading": "Изменить тему",
+          "heading": "Темная тема",
           "description": "Вы можете выбрать темную или светлую тему для интерфейса сайта.",
           "successMessage": "Тема сайта успешно изменена"
         },
